--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,30 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-color: #e1e1e1;
+    background-color: #202020;
     color: #333;
 }
 
 header {
+    top: 0;
+    left: 0;
+    width: 100%;
+    position: fixed;
     display: flex;
     justify-content: flex-start;
     padding: 10px; /* Adjusted padding */
     background-color: #202020; /* Teal header */
+
+}
+
+.header-content{
+    margin-left: 25%;
+    width: 100%;
 }
 
 .main-content{
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin-top: 25px;
     padding: 20px;
     background-color: #e1e1e1;
     color: #333;
@@ -67,8 +77,12 @@ header {
     padding: 100px 50px; /* Increased padding */
     margin: 0 auto;
     height: 300px;
-    background: linear-gradient(35deg, rgb(174, 174, 174), rgb(204, 204, 204)); 
+    background: linear-gradient(35deg, rgb(100, 100, 100), rgb(230, 230, 230)); 
     text-align: right;
+}
+
+.about-container{
+    margin-right: 25%;
 }
 
 button {
@@ -88,6 +102,14 @@ button:hover {
 
 .projects-section{
     padding: 20px; /* Increased padding */
+    display: flex;
+    justify-content: center;
+    flex-flow: column wrap;
+    background-color: #e1e1e1;
+}
+
+.projects-container{
+    margin-left: 25%;;
 }
 
 .portfolio-section {
